Changelog file for Structures extra.
https://github.com/mctechnology17/zmk-nice-oled/blob/main/CHANGELOG.txt

# FEATURES 0.0.1-beta1 (Mar 24, 2025)
=======================================
+ NEW FEATURES
- [x] COMMIT: feat: CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK, README updated
- [x] CHANGELOG.txt updated
- [x] README.md updated
- [x] delete duplicate (in progress)

# FEATURES 0.0.1-beta1 (Mar 24, 2025)
=======================================
+ NEW FEATURES
- [x] COMMIT: feat: new shield nice_epaper, hid, modifiers, luna the dog
- [x] delete duplicate (in progress)
- [x] nice_view screen support
- [x] modifiers support
- [x] modifiers luna widget support
- [x] hid support
- [x] hid luna widget support
- [x] load animation (in progress)
- [x] README.md updated

+ TODO
- [ ] delete duplicate (in progress)
- [ ] add a video tutorial to the repository
- [ ] add new shield nice_color like Prospector (in progress)
- [ ] OLED screens support 64x128, 128x64 and 128x128 (in progress)
- [ ] dongle mode (Show periphery battery in Central) (in progress)
- [ ] menu rgb (in progress)
- [ ] screen protector (in progress)
- [ ] compatibility orientation in different degrees 0, 90, 180, 270 (in progress)
- [ ] more animations and fixed images for periphery (in progress)
- [ ] Smart battery (in progress)
- [ ] granular configuration to deactivate each widget (in progress)
- [ ] load animation (in progress)
- [ ] Responsive Bongocat per key (in progress)
- [ ] Responsive Bongocat wpm (in progress)