@@ -1,4 +1,5 @@
 #include <zephyr/kernel.h>
+#include <stdio.h>
 #include "battery.h"
 #include "../assets/custom_fonts.h"
 
@@ -75,6 +76,25 @@ static void draw_charging_level(lv_obj_t *canvas, const struct status_state *sta
     lv_canvas_draw_img(canvas, 62, 21, &bolt, &img_dsc);
 }
 
+#if IS_ENABLED(CONFIG_ZMK_SPLIT) && IS_ENABLED(CONFIG_ZMK_SPLIT_ROLE_CENTRAL)
+static void draw_peripheral_levels(lv_obj_t *canvas, const struct status_state *state) {
+    lv_draw_label_dsc_t label_dsc;
+    init_label_dsc(&label_dsc, LVGL_FOREGROUND, &pixel_operator_mono, LV_TEXT_ALIGN_LEFT);
+
+    uint8_t line = 0;
+    for (int i = 0; i < ZMK_SPLIT_BLE_PERIPHERAL_COUNT; i++) {
+        if (!state->peripheral_battery_present[i]) {
+            continue;
+        }
+
+        char text[14];
+        snprintf(text, sizeof(text), "P%i %i%%", i + 1, state->peripheral_battery_level[i]);
+        lv_canvas_draw_text(canvas, 0, 36 + (line * 12), 64, &label_dsc, text);
+        line++;
+    }
+}
+#endif
+
 void draw_battery_status(lv_obj_t *canvas, const struct status_state *state) {
     lv_draw_label_dsc_t label_left_dsc;
     init_label_dsc(&label_left_dsc, LVGL_FOREGROUND, &pixel_operator_mono, LV_TEXT_ALIGN_LEFT);
@@ -86,4 +106,8 @@ void draw_battery_status(lv_obj_t *canvas, const struct status_state *state) {
     } else {
         draw_level(canvas, state);
     }
+
+#if IS_ENABLED(CONFIG_ZMK_SPLIT) && IS_ENABLED(CONFIG_ZMK_SPLIT_ROLE_CENTRAL)
+    draw_peripheral_levels(canvas, state);
+#endif
 }
