@@ -1,6 +1,7 @@
 #pragma once
 
 #include <lvgl.h>
+#include <zmk/ble.h>
 #include <zmk/endpoints.h>
 
 #define CANVAS_WIDTH 68
@@ -22,6 +23,10 @@ struct status_state {
     uint8_t layer_index;
     const char *layer_label;
     uint8_t wpm[10];
+#if IS_ENABLED(CONFIG_ZMK_SPLIT) && IS_ENABLED(CONFIG_ZMK_SPLIT_ROLE_CENTRAL)
+    uint8_t peripheral_battery_level[ZMK_SPLIT_BLE_PERIPHERAL_COUNT];
+    bool peripheral_battery_present[ZMK_SPLIT_BLE_PERIPHERAL_COUNT];
+#endif
 #else
     bool connected;
 #endif
